--- a/school/views/teacher_staff.xml
+++ b/school/views/teacher_staff.xml
@@ -50,6 +50,7 @@
         <field name="model">teacher.student</field>
         <field name="arch" type="xml">
             <tree>
+                <field name="name"/>
                 <field name="first_name"/>
                 <field name="last_name"/>
                 <field name="dob"/>
@@ -78,6 +79,7 @@
                         <group>
                             <field name="name"/>
                             <field name="qualification"/>
+                            <field name="company_id"/>
                         </group>
                         <group>
                             <field name="dob"/>
