--- a/school/wizard/admission_cancle_info_view.xml
+++ b/school/wizard/admission_cancle_info_view.xml
@@ -8,7 +8,7 @@
                 <sheet>
                     <group>
                         <group>
-                            <field name="wiz_admission_id" readonly="1" context="{}"/>
+                            <field name="wiz_admission_id" readonly="1" context="{'admission_id': wiz_admission_id }"/>
                             <field name="reason"/>
                         </group>
                     </group>
