--- a/school/views/admission.xml
+++ b/school/views/admission.xml
@@ -37,7 +37,9 @@
             <search>
                 <field name="name"/>
                 <field name="gender"/>
-                <field name="city"/>
+                <field name="std"/>
+                                <filter string="Medium" name="medium" context="{'group_by': 'medium'}"/>
+
             </search>
         </field>
     </record>
@@ -113,7 +115,7 @@
         <field name="name">Admission Form</field>
         <field name="res_model">admission.student</field>
         <field name="view_mode">tree,form,kanban</field>
-        <field name="context">{}</field>
+        <field name="context">{'default_medium': 'Gujarati'}</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
                 Create your first addmission form
