--- a/school/views/teacher_staff.xml
+++ b/school/views/teacher_staff.xml
@@ -37,10 +37,10 @@
         <field name="model">teacher.student</field>
         <field name="arch" type="xml">
             <search>
-                <field name="first_name"/>
-                <field name="last_name"/>
+                <field name="name"/>
                 <field name="qualification"/>
-                <field name="gender"/>
+                <field name="company_id"/>
+                <field name="age"/>
                 <field name="attendance_id" filter_domain="[('name','ilike',self)]"/>
             </search>
         </field>
@@ -51,14 +51,11 @@
         <field name="arch" type="xml">
             <tree>
                 <field name="name"/>
-                <field name="first_name"/>
-                <field name="last_name"/>
-                <field name="dob"/>
                 <field name="qualification"/>
-                <field name="gender"/>
-                <field name="address"/>
-                <field name="city"/>
-                <field name="contact"/>
+                <field name="company_id"/>
+                <field name="dob"/>
+                <field name="age"/>
+                <field name="lecture"/>
             </tree>
         </field>
     </record>
