--- a/school/views/admission.xml
+++ b/school/views/admission.xml
@@ -115,7 +115,7 @@
         <field name="name">Admission Form</field>
         <field name="res_model">admission.student</field>
         <field name="view_mode">tree,form,kanban</field>
-        <field name="context">{'default_medium': 'Gujarati'}</field>
+        <field name="context">{'default_medium': 'Gujarati','default_second_language': 'Gujarati'}</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
                 Create your first addmission form
