--- a/school/views/attendance_peon.xml
+++ b/school/views/attendance_peon.xml
@@ -60,7 +60,7 @@
         <field name="context">{}</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
-                Create your first addmission form
+                Submit Your Attendance Form
             </p>
         </field>
     </record>
