--- a/school/views/teacher_staff.xml
+++ b/school/views/teacher_staff.xml
@@ -66,10 +66,18 @@
         <field name="model">teacher.student</field>
         <field name="arch" type="xml">
             <form>
+                <header>
+                <field name="state" widget="statusbar" statusbar_visible="draft,in_Consultation,done"
+                           options="{'clickable': True}"/>
+
+                </header>
                 <sheet>
                     <div class="oe_title">
                         <h1>
                             <field name="heading" readonly="1"/>
+                            <h2>
+                                <field name="priority" widget="priority" class="mr-3"/>
+                            </h2>
                         </h1>
                     </div>
                     <group>
@@ -120,7 +128,7 @@
         <field name="context">{}</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
-                Create your first addmission form
+                Create Your form
             </p>
         </field>
     </record>
