--- a/school/views/admission.xml
+++ b/school/views/admission.xml
@@ -81,6 +81,7 @@
                     <group>
                         <group>
                             <field name="name"/>
+                            <field name="student_id" domain="[('partner_id.city','=','Fremont')]"/>
                             <field name="academic_year"/>
                             <field name="admission_date"/>
                         </group>
