--- a/school/report/school_report_template.xml
+++ b/school/report/school_report_template.xml
@@ -1,25 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <template id="report_school_student_template">
-       <t t-call="web.external_layout">
-           <div class="page">
-               <div class="oe_structure"/>
-               <h2>Student Report</h2>
-               <p><span t-field="doc.name"/></p>
-
-               <p><span t-field="doc.age"/></p>
-           </div>
+       <t t-foreach="docs" t-as="o">
+           <t t-call="web.external_layout">
+               <div class="page">
+                   <div class="oe_structure"/>
+                   <h2>Student Report</h2>
+                   <p><span t-field="o.name"/></p>
+               </div>
+           </t>
        </t>
     </template>
 
     <template id="report_school_student">
-        <t t-call="web.html_container">
-            <t t-foreach="docs" t-as="doc">
-                <t t-call="school.report_school_student_template"/>
-            </t>
+    <t t-call="web.html_container">
+        <t t-foreach="docs" t-as="doc">
+            <t t-call="school.report_school_student_template"/>
         </t>
-    </template>
-
-<!--    Name : Manan-->
-<!--    Age : 23-->
+    </t>
+</template>
 </odoo>
