--- a/school/report/school_student_report_action.xml
+++ b/school/report/school_student_report_action.xml
@@ -11,4 +11,16 @@
         <field name="binding_model_id" ref="model_school_student"/>
         <field name="binding_type">report</field>
     </record>
+
+    <record id="action_report_admission_student" model="ir.actions.report">
+        <field name="name">Admission</field>
+        <field name="model">admission.student</field>
+        <field name="report_type">qweb-pdf</field>
+        <field name="report_name">school.report_admission_student</field>
+        <field name="report_file">school.report_admission_student</field>
+        <field name="print_report_name">object.name</field>
+        <field name="binding_model_id" ref="model_admission_student"/>
+        <field name="binding_type">report</field>
+    </record>
+
 </odoo>
