--- a/school/views/student.xml
+++ b/school/views/student.xml
@@ -93,6 +93,7 @@
                             <field name="name" widget="char_emojis"/>
                             <field name="school_standard" />
                             <field name="date_of_birth"/>
+                            <field name="company_id"/>
                         </group>
                         <group>
                             <field name="age"/>
