--- a/school/report/admission_report_template.xml
+++ b/school/report/admission_report_template.xml
@@ -70,9 +70,10 @@
                         </t>
 
                     </table>
-
-                    <h3>Total</h3>
-                    <span t-esc="current_reg_total"/>
+                    <div class="d-flex justify-content-end">
+                         <h6 class="mx-auto p-2 mb-3 bg-secondary text-white">Total</h6>
+                        <span class="p-2 mb-3 bg-secondary text-white" t-esc="current_reg_total"/>
+                    </div>
                 </div>
             </t>
         </t>
