--- a/school/views/menu.xml
+++ b/school/views/menu.xml
@@ -112,10 +112,10 @@
             parent="menu_school_root"
             sequence="0"/>
 
-    <menuitem
-            id="menu_average_grade_root"
-            name="Average Grade"
-            parent="menu_grade_root"
-            action="action_average_garde_list"
-            sequence="0"/>
+<!--    <menuitem-->
+<!--            id="menu_average_grade_root"-->
+<!--            name="Average Grade"-->
+<!--            parent="menu_grade_root"-->
+<!--            action="action_average_garde_list"-->
+<!--            sequence="0"/>-->
 </odoo>
