--- a/school/views/student.xml
+++ b/school/views/student.xml
@@ -65,95 +65,95 @@
     </record>
 
 
-    <record id="view_teacher_form" model="ir.ui.view">
-        <field name="name">view.teacher.form</field>
-        <field name="model">school.student</field>
-        <field name="arch" type="xml">
-            <form>
-                <header>
-                    <field name="state" widget="statusbar" statusbar_visible="draft,in_Consultation,done"
-                           options="{'clickable': True}"/>
-                    <button name="action_approve_student" id="action_student_approve" string="Approve Student"
-                            type="object"/>
-                    <button name="action_cancel_student" id="action_student_cancel" string="Cancel" type="object"/>
-                    <button name="%(school.action_student_last_school)d" string="Student Last School" type="action"/>
-                </header>
-                <sheet>
-                    <div class="oe_title">
-                        <h1>
-                            <field name="heading" readonly="1"/>
+<!--    <record id="view_teacher_form" model="ir.ui.view">-->
+<!--        <field name="name">view.teacher.form</field>-->
+<!--        <field name="model">school.student</field>-->
+<!--        <field name="arch" type="xml">-->
+<!--            <form>-->
+<!--                <header>-->
+<!--                    <field name="state" widget="statusbar" statusbar_visible="draft,in_Consultation,done"-->
+<!--                           options="{'clickable': True}"/>-->
+<!--                    <button name="action_approve_student" id="action_student_approve" string="Approve Student"-->
+<!--                            type="object"/>-->
+<!--                    <button name="action_cancel_student" id="action_student_cancel" string="Cancel" type="object"/>-->
+<!--                    <button name="%(school.action_student_last_school)d" string="Student Last School" type="action"/>-->
+<!--                </header>-->
+<!--                <sheet>-->
+<!--                    <div class="oe_title">-->
+<!--                        <h1>-->
+<!--                            <field name="heading" readonly="1"/>-->
 
-                            <h2>
-                                <field name="priority" widget="priority" class="mr-3"/>
-                            </h2>
-                        </h1>
-                    </div>
-                    <group>
-                        <group>
-                            <field name="name" widget="char_emojis"/>
-                            <field name="school_standard" />
-                            <field name="date_of_birth"/>
-                            <field name="company_id"/>
-                        </group>
-                        <group>
-                            <field name="age"/>
-                            <field name="gender"/>
-                            <field name="teacher_id"/>
-                            <button name="button_save" string="Save" class="oe_highlight" type="object"/>
-                            <button name="%(action_school_list)d" string="Action Save" type="action"
-                                    class="oe_highlight"/>
-                            <!--<field name="average_ids"/>-->
-                        </group>
-                    </group>
-                    <notebook>
-                        <page string="Some Issue" nama="Some Issue">
-                            <field name="issues" placeholder="Enter Some Issue"/>
-                        </page>
-                        <page string="Grade">
-                            <field name="grade_ids">
-                                <tree>
-                                    <field name="science"/>
-                                    <field name="chemistry"/>
-                                    <field name="hindi"/>
-                                    <field name="gujarati"/>
-                                    <field name="maths"/>
-                                    <field name="result"/>
-                                </tree>
-                            </field>
-                        </page>
-                        <page string="Personal Information">
-                            <group>
-                                <group>
-                                    <field name="address"/>
-                                    <field name="contact"/>
-                                    <field name="city"/>
-                                </group>
-                                <group>
-                                    <field name="admission_id"/>
-                                    <field name="partner_id"/>
-                                </group>
-                            </group>
-                        </page>
-                        <page string="Fees">
-                            <group>
-                                <group>
-                                    <field name="registration_fees"/>
-                                    <field name="tution_fees"/>
-                                    <field name="currency_id"/>
-                                    <field name="company_id"/>
-                                </group>
-                                <group>
-                                    <field name="stud_phone"/>
-                                    <field name="total_fees"/>
-                                    <field name="donation_fees" widget="monetary"/>
-                                </group>
-                            </group>
-                        </page>
-                    </notebook>
-                </sheet>
-            </form>
-        </field>
-    </record>
+<!--                            <h2>-->
+<!--                                <field name="priority" widget="priority" class="mr-3"/>-->
+<!--                            </h2>-->
+<!--                        </h1>-->
+<!--                    </div>-->
+<!--                    <group>-->
+<!--                        <group>-->
+<!--                            <field name="name" widget="char_emojis"/>-->
+<!--                            <field name="school_standard" />-->
+<!--                            <field name="date_of_birth"/>-->
+<!--                            <field name="company_id"/>-->
+<!--                        </group>-->
+<!--                        <group>-->
+<!--                            <field name="age"/>-->
+<!--                            <field name="gender"/>-->
+<!--                            <field name="teacher_id"/>-->
+<!--                            <button name="button_save" string="Save" class="oe_highlight" type="object"/>-->
+<!--                            <button name="%(action_school_list)d" string="Action Save" type="action"-->
+<!--                                    class="oe_highlight"/>-->
+<!--                            &lt;!&ndash;<field name="average_ids"/>&ndash;&gt;-->
+<!--                        </group>-->
+<!--                    </group>-->
+<!--                    <notebook>-->
+<!--                        <page string="Some Issue" nama="Some Issue">-->
+<!--                            <field name="issues" placeholder="Enter Some Issue"/>-->
+<!--                        </page>-->
+<!--                        <page string="Grade">-->
+<!--                            <field name="grade_ids">-->
+<!--                                <tree>-->
+<!--                                    <field name="science"/>-->
+<!--                                    <field name="chemistry"/>-->
+<!--                                    <field name="hindi"/>-->
+<!--                                    <field name="gujarati"/>-->
+<!--                                    <field name="maths"/>-->
+<!--                                    <field name="result"/>-->
+<!--                                </tree>-->
+<!--                            </field>-->
+<!--                        </page>-->
+<!--                        <page string="Personal Information">-->
+<!--                            <group>-->
+<!--                                <group>-->
+<!--                                    <field name="address"/>-->
+<!--                                    <field name="contact"/>-->
+<!--                                    <field name="city"/>-->
+<!--                                </group>-->
+<!--                                <group>-->
+<!--                                    <field name="admission_id"/>-->
+<!--                                    <field name="partner_id"/>-->
+<!--                                </group>-->
+<!--                            </group>-->
+<!--                        </page>-->
+<!--                        <page string="Fees">-->
+<!--                            <group>-->
+<!--                                <group>-->
+<!--                                    <field name="registration_fees"/>-->
+<!--                                    <field name="tution_fees"/>-->
+<!--                                    <field name="currency_id"/>-->
+<!--                                    <field name="company_id"/>-->
+<!--                                </group>-->
+<!--                                <group>-->
+<!--                                    <field name="stud_phone"/>-->
+<!--                                    <field name="total_fees"/>-->
+<!--                                    <field name="donation_fees" widget="monetary"/>-->
+<!--                                </group>-->
+<!--                            </group>-->
+<!--                        </page>-->
+<!--                    </notebook>-->
+<!--                </sheet>-->
+<!--            </form>-->
+<!--        </field>-->
+<!--    </record>-->
 
     <record id="view_school_student_pivot" model="ir.ui.view">
         <field name="name">school.stident.pivot</field>
