--- a/school/views/student.xml
+++ b/school/views/student.xml
@@ -121,7 +121,7 @@
                                 </tree>
                             </field>
                         </page>
-                        <page string="Personal Information" groups="school.group_school_teacher">
+                        <page string="Personal Information" groups="school.group_school_din">
                             <group>
                                 <group>
                                     <field name="address"/>
@@ -197,7 +197,7 @@
         <field name="view_mode">tree,form,pivot,graph,kanban</field>
          <field name="domain">[('total_fees', '>',0)]</field>
         <field name="context">{'default_partner_id': 10, 'default_contact': 'ABC'}</field>
-        <field name="groups">school.group_school_teacher</field>
+        <field name="groups_id" eval="[(4,ref('school.group_school_teacher'))]"/>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
                 Create your first addmission form
