--- a/school/views/student.xml
+++ b/school/views/student.xml
@@ -77,6 +77,8 @@
                             type="object"/>
                     <button name="action_cancel_student" id="action_student_cancel" string="Cancel" type="object"/>
                     <button name="%(school.action_student_last_school)d" string="Student Last School" type="action"/>
+                    <button name="action_approve_student_email_send" string="Send by Email" type="object" class="btn-primary"/>
+
                 </header>
                 <sheet>
                     <div class="oe_title">
