--- a/school/views/student.xml
+++ b/school/views/student.xml
@@ -77,6 +77,7 @@
                             type="object"/>
                     <button name="action_cancel_student" id="action_student_cancel" string="Cancel" type="object"/>
                     <button name="%(school.action_student_last_school)d" string="Student Last School" type="action"/>
+                    <button name="action_open_list" string="Student Last School 1" type="object"/>
                     <button name="action_approve_student_email_send" string="Send by Email" type="object" class="btn-primary"/>
 
                 </header>
@@ -154,6 +155,11 @@
                         </page>
                     </notebook>
                 </sheet>
+                <div class="oe_chatter">
+                    <field name="message_follower_ids"/>
+                    <field name="activity_ids"/>
+                    <field name="message_ids"/>
+                </div>
             </form>
         </field>
     </record>
