--- a/school/views/admission.xml
+++ b/school/views/admission.xml
@@ -71,6 +71,7 @@
                             type="object"/>
                     <button name="action_cancel_admission" id="action_admission_cancel" string="Cancel" type="object"/>
                     <button name="%(school.action_admission_cancel)d" string="Admission Cancel" type="action"/>
+                    <button name="action_approve_admission_email_send" string="Send by Email" type="object" class="btn-primary"/>
                 </header>
                 <sheet>
                     <div class="oe_title">
@@ -130,6 +131,11 @@
                         </page>
                     </notebook>
                 </sheet>
+                <div class="oe_chatter">
+                    <field name="message_follower_ids"/>
+                    <field name="activity_ids"/>
+                    <field name="message_ids"/>
+                </div>
             </form>
         </field>
     </record>
