--- a/school/report/admission_report_template.xml
+++ b/school/report/admission_report_template.xml
@@ -45,7 +45,7 @@
                     <table class="table">
                         <t t-set="current_reg_total" t-value="0"/>
                         <thead>
-                            <tr>
+                            <tr>stud
                                 <th scope="col">Name</th>
                                 <th scope="col">Age</th>
                                 <th scope="col">Registration Fees</th>
